added an API to execute a workflow
