# static/openapi.json
@@ -1,81 +1,239 @@
 {
-    "openapi": "3.0.1",
-    "info": {
-        "title": "NAAS PORT LAUNCHER",
-        "description": "APIs for interacting with sandbox IAP",
-        "version": "1.0.0"
+  "openapi": "3.0.1",
+  "info": {
+    "title": "NAAS PORT LAUNCHER",
+    "description": "APIs for interacting with sandbox IAP",
+    "version": "1.0.0"
+  },
+  "tags": [
+    {
+      "name": "Auth",
+      "description": "for IAP authentication"
     },
-    "tags": [{
-            "name": "Auth",
-            "description": "for IAP authentication"
-        },
-        {
-            "name": "Start a WF",
-            "description": "For future use"
+    {
+      "name": "Start a workflow",
+      "description": "starts a workflow in sandbox env"
+    }
+  ],
+  "paths": {
+    "/auth": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "takes username and password then fetches authentication token",
+        "parameters": [
+          {
+            "name": "sandboxNumber",
+            "in": "query",
+            "description": "The IAP sandbox number",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "example": 17
+          },
+          {
+            "name": "username",
+            "in": "query",
+            "description": "The user name for login",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "admin@pronghorn"
+          },
+          {
+            "name": "password",
+            "in": "query",
+            "description": "The password for login",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "admin"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Generated token",
+            "content": {
+              "plain/text": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "if4r98ffb7fg4904g408g0h4g="
+              }
+            }
+          },
+          "400": {
+            "description": "Error",
+            "content": {
+              "plain/text": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "Can't reach the IAP server"
+              }
+            }
+          }
         }
-    ],
-    "paths": {
-        "/auth": {
-            "get": {
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "takes username and password then fetches authentication token from sandbox IAP",
-                "parameters": [{
-                        "name": "sandboxNumber",
-                        "in": "query",
-                        "description": "The user name for login",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        },
-                        "example": 17
-                    }, {
-                        "name": "username",
-                        "in": "query",
-                        "description": "The user name for login",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "admin@pronghorn"
+      }
+    },
+    "/start_wf": {
+      "post": {
+        "tags": [
+          "Start a workflow"
+        ],
+        "summary": "takes sandbox number, workflow name and payload and returns job-ID",
+        "parameters": [
+          {
+            "name": "sandboxNumber",
+            "in": "query",
+            "description": "The IAP sandbox number",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "example": 17
+          },
+          {
+            "name": "workflowName",
+            "in": "query",
+            "description": "Name of the workflow",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "LNAAS_CREATE_UNI_SL_V1"
+          }
+        ],
+        "requestBody": {
+          "description": "The request payload",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object"
+              },
+              "example": {
+                "requestPayload": {
+                  "parentCorrelationId": "AP-TEST-1234",
+                  "customerName": "SUNDAY UAT",
+                  "customerNumber": "1-CP6I7Y",
+                  "orderSource": "SwIFT",
+                  "productOfferName": "DIA",
+                  "productInstanceId": "MVL-123456",
+                  "serviceOrderNumber": "O-00026477-MVL-029928",
+                  "orderId": "O-00026476",
+                  "orderVersion": "1",
+                  "mainProductId": "442840513",
+                  "fulfillmentRequestNumber": "FR0014427-1",
+                  "customerRequestedDate": "2021-02-08",
+                  "customerCommittedDate": "2021-02-08",
+                  "productSubType": "hyper_vpn",
+                  "vrfServiceAlias": "00/VPXX/513575/LVLC",
+                  "uniServiceAlias": "CO/KXFN/555556/LVLC",
+                  "serviceAlias": "SC/MVXX/522124/LVLC",
+                  "ceVlan": "200",
+                  "serviceBandwidth": "1000 Mbps",
+                  "cosAllocation": "Multiple COS",
+                  "classOfServiceType": "mcos",
+                  "premium": "5000",
+                  "premiumPlus": "5000",
+                  "wanIPAddressBlocks": [
+                    {
+                      "ipVersion": "IPv4",
+                      "ipAddressBlock": "8.47.139.244/30"
                     },
                     {
-                        "name": "password",
-                        "in": "query",
-                        "description": "The password for login",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        },
-                        "example": "admin"
+                      "ipVersion": "IPv6",
+                      "ipAddressBlock": "2001:db8:1234:5000::ffff/12"
                     }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Generated token",
-                        "content": {
-                            "plain/text": {
-                                "schema": {
-                                    "type": "string"
-                                },
-                                "example": "hyt89if4r98ffb7fg4904g408g0h4g="
-                            }
-                        }
+                  ],
+                  "customerProvidedIp": false,
+                  "staticRoutes": [
+                    {
+                      "route": "192.108.1.0/24",
+                      "neighbor": "198.19.201.130",
+                      "inject": "customer-static-bb2",
+                      "ddos": "true"
                     },
-                    "400": {
-                        "description": "Invalid username/password supplied",
-                        "content": {
-                            "plain/text": {
-                                "schema": {
-                                    "type": "string"
-                                },
-                                "example": "Can't reach the IAP server"
-                            }
-                        }
+                    {
+                      "route": "2001:db8:1234:5000::ffff/12",
+                      "neighbor": "2001:0db8:85a3:0000:0000:8a2e:0370:7335",
+                      "inject": "customer-static-bb2",
+                      "ddos": "false"
                     }
+                  ],
+                  "bgps": [
+                    {
+                      "neighbor": "198.19.201.130",
+                      "asn": "65432",
+                      "scope": "location",
+                      "password": "dreku8j",
+                      "bfd": {
+                        "multiplier": "5",
+                        "interval": "500"
+                      }
+                    },
+                    {
+                      "neighbor": "2001:0db8:85a3:0000:0000:8a2e:0370:7335",
+                      "asn": "65432",
+                      "scope": "location",
+                      "password": "dreku8j",
+                      "bfd": {
+                        "multiplier": "5",
+                        "interval": "500"
+                      }
+                    }
+                  ],
+                  "cfsId": "66B74B62AAD1408F9158CB868C1AEF98",
+                  "rfsId": "52254FF7ED594FC1B4F545F96F8FFFD7",
+                  "pathActTransactionId": "e0128046-793d-4448-b878-9f36bdcc0bf9",
+                  "asriParentTransactionId": "551748370",
+                  "asriTransactionId": "551748370-8845-IPVPN-1"
                 }
+              }
             }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Job ID and URL",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "job_id": {
+                      "type": "string"
+                    },
+                    "job_url": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "example": {
+                  "job_id": "91cb4a3272f549fe8a8732d9",
+                  "job_url": "http://titansdevcarrier.clcloud.af.qwest.net:4017/workflow_engine/viewer?job_id=91cb4a3272f549fe8a8732d9&job_status=complete&details=true"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Error",
+            "content": {
+              "plain/text": {
+                "schema": {
+                  "type": "string"
+                },
+                "example": "Cannot start the job"
+              }
+            }
+          }
         }
+      }
     }
+  }
 }
